@@ -1,3 +1,7 @@
+zg 29.01.2014 14:10:34 +0200 - build 279
+
+1. LuaFAR: уточнение 276 - для несуществующих элементов DM_GETTEXT возвращает nil.
+
 shmuel 29.01.2014 09:42:12 +0200 - build 278
 
 1. Откат изменения DM_LISTGETCURPOS предыдущего коммита.
